--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             GOT IIT DELHI
         </div>   
     </div>
-    <div class="multicolor1">
+    <!-- <div class="multicolor1">
         THE BEST PLACE FOR THE BEST CAREER.
-    </div>
+    </div> -->
      <!-- <div class="flex-container2">
          <div class="flex-item8">
              You can ask doubt <br>
@@ -120,17 +120,20 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi veniam beatae ipsam. At, iste ad iure esse ea commodi quia, odit, fugit facilis
            aliquid voluptatum! Beatae repellat qui excepturi inventore!
      </div> -->
-    <div class="grid-container">
-        <div class="grid-item1">
+    <div class="box-container">
+        <div class="box-item1">
+            THE BEST PLACE FOR THE BEST CAREER.
+        </div>
+        <div class="box-item2">
             Lorem,asperiores delectus eius assumenda ipsam quae.
         </div>
-        <div class="grid-item2">
+        <div class="box-item3">
             Lorem,asperiores delectus eius assumenda ipsam quae.
         </div>
-        <div class="grid-item3">
+        <div class="box-item4">
             Lorem,asperiores delectus eius assumenda ipsam quae.
         </div>
-        <div class="grid-item4">
+        <div class="box-item5">
             <ol type="1">
                 <li>Study Material</li>
                 <li>Doubt Mentors</li>
@@ -140,15 +143,18 @@
                 <li>Our Team</li>
             </ol>
         </div>
-        <div class="grid-item5">
+        <div class="box-item6">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim reprehenderit quasi cum tenetur qui obcaecati perferendis doloribus aspernatur sed quisquam! 
             Modi omnis et sint quod molestiae. Modi veritatis error illum?
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam consequatur eaque nisi sequi, unde repudiandae vero reprehenderit pariatur architecto, quod animi ad, dolores molestias nesciunt.
              Ab quos dignissimos maiores!
         </div>
+        <div class="box-item7">
+            All The Best!
+        </div>
     </div>
-    <div class="footer">
+    <!-- <div class="footer">
         All The Best!
-    </div>
+    </div> -->
 </body>
 </html>
